--- a/public/index.html
+++ b/public/index.html
@@ -1,13 +1,14 @@
 <!DOCTYPE html>
-<html lang="en">
+<html lang="en" style="height: 100%">
   <head>
     <meta charset="utf-8">
     <meta http-equiv="X-UA-Compatible" content="IE=edge">
     <meta name="viewport" content="width=device-width,initial-scale=1.0">
+    <link href="https://fonts.googleapis.com/css?family=Modak&display=swap" rel="stylesheet">
     <link rel="icon" href="./favicon.ico">
     <title>Punch Punch</title>
   </head>
-  <body>
+  <body style="height: 100%">
     <noscript>
       <strong>We're sorry but client doesn't work properly without JavaScript enabled. Please enable it to continue.</strong>
     </noscript>
