--- a/public/index.html
+++ b/public/index.html
@@ -9,9 +9,10 @@
     <title>Punch Punch</title>
   </head>
   <body style="height: 100%">
-    <noscript>
-      <strong>We're sorry but client doesn't work properly without JavaScript enabled. Please enable it to continue.</strong>
-    </noscript>
+      <noscript>
+        <strong>We're sorry but client doesn't work properly without JavaScript enabled. Please enable it to continue.</strong>
+      </noscript>
+      <script src="https://kit.fontawesome.com/5cd1e1d933.js"></script>
     <div id="app"></div>
     <!-- built files will be auto injected -->
   </body>
